--- a/index.html
+++ b/index.html
@@ -12,14 +12,27 @@
 </head>
 
 <body>
-    <h1>EU SOU UM TÍTULO</h1>
-    <h1 class="titulo">EU SOU UM TÍTULO</h1>
 
-    <p>Eu sou um Paragrafo</p>
-    <p id="paragrafo">Eu sou um Paragrafo</p>
-    <b>Eu sou um texto</b>
-    <br>
-    <i>Eu sou um texto. mamma mia</i>
+   <div class="header">
+
+       <div class="container">
+           
+           <h1>Acquatec</h1>
+
+           <ul class="navbar">
+
+               <li>Nossos Serviços</li>
+               <li>Sobre nós</li>
+               <li>Login</li>
+               <li>Cadastrar</li>
+               <li>Suporte</li>
+
+           </ul>
+
+        </div>
+
+   </div>
+
 </body>
 
 </html>
