--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
 
        <div class="container">
            
-           <h1>Acquatec</h1>
+           <h1 class="titulo">Acquatec</h1>
 
            <ul class="navbar">
 
-               <li>Nossos Serviços</li>
+               <li>Home</li>
                <li>Sobre nós</li>
-               <li>Login</li>
+               <li> 
+                   <a href="Login.html">Login</a>
+                </li>
                <li>Cadastrar</li>
                <li>Suporte</li>
 
@@ -32,6 +34,9 @@
         </div>
 
    </div>
+
+   <p>Página Home</p>
+   <!---->
 
 </body>
 
